# CCTV-Vision

./: .gitattributes  Dockerfile  LICENSE  README.md  best_attribute_model.pth  docker-compose.yml  enviroment.txt  environment-cpu.yml  environment.yml  main.py  pyproject.toml  requirements.txt
Artifacts Currently/: attribute_classifier.py  best_detection_model.pth  colab_training.md  comprehensive_readme.md  enhanced_pipeline.py  env_setup.sh  enviroment.txt  master_setup.py  person_detector.py  person_tracker.py  testing_framework.py  training_system.py  usage_examples.py
configs/: config.json
docs/: index.html
models/: ULTIMATE_model_score_0.9398_20250716_110939.pt
outputExamples/: index.html
src/person_search/: __init__.py  run.py  system.py
